src/test/ui/while-label-break-condition.stderr
error[E0426]: use of undeclared label `'a`
  --> $DIR/while-label-break-condition.rs:12:21
   |
LL |     'a: while break 'a {} //~ ERROR: use of undeclared label
   |                     ^^ undeclared label `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
